Newsbox description cut off [#213 state:resolved] [#230 state:resolved]

--- a/theme/_css/skeleton.less
+++ b/theme/_css/skeleton.less
@@ -50,7 +50,6 @@
 		.container .footer-box.section-front		{ float: none; clear: both; margin-top: 20px; margin-left: 0px; width: auto !important; }
 		.container .community-buttons				{ display: none; }
 		.container .collapse_content				{ display: none !important; }
-		.container .newsbox							{ font-size: 95%; }
 	}
 
 /*  #Mobile
@@ -62,7 +61,7 @@
 		.container .sidebar                         { width: 100%; float: none; }
 		.container .sidebar .header                 { display: none; }
         .container .sidebar .content                { padding-left: 0px !important; }
-        .container .newsbox                         { width: 294px; margin-bottom: 20px; height: auto; padding-bottom: 30px; font-size: 95%; }
+        .container .newsbox                         { width: 294px; margin-bottom: 20px; height: auto; padding-bottom: 30px; }
 		.container .newsbox.layoutdouble            { width: 294px !important; height: auto !important; min-height: 200px; }
 		.container .newsbox.layoutbgimage           { height: auto !important; min-height: 150px; }
         .container .newsrow                         { margin-bottom: 0px; }
